--- a/curiosidades.html
+++ b/curiosidades.html
@@ -19,73 +19,75 @@
     
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
-        <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Elenco.html">Elenco</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="curiosidades.html">Curiosidades<span class="sr-only">(atual)</span></a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
+        <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Elenco.html">Elenco</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="curiosidades.html">Curiosidades<span class="sr-only">(atual)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Temporadas
-                </a>
-                <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
-                  <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
-                  <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
-                </div>
-              </li> 
-              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
-              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
-            </ul>
+              </a>
+              <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
+                <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
+                <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
+              </div>
+            </li> 
+          </ul>
+          <div class="direita">
+            <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+            <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
           </div>
-        </nav>
+        </div>
+      </nav>
 
     <!-- FIM MENU -->
 
     <!-- texto -->
 
-    <div class="pagina">
-        <h2 class="sub1">Inicio >>Curiosidades</h2>
-        <h3 class="sub2">Direto do mundo invertido: 5 curiosidades sobre a série Stranger Things</h3>
-        <div class="curiP">
-        <p class="recuo">A série Stranger Things é uma das mais populares do catálogo da Netflix, lançada em 2016 e com duas temporadas exibidas. Mas você sabia que, antes disso acontecer, ela já foi rejeitada 20 vezes pela produtora? Esta e outras curiosidades você vai descobrir agora!</p>
-          <ol>
-            <li><h4 class="curih4">Superando a rejeição</h4></li>
-            <p>Às vezes, tudo o que a gente precisa é superar uma rejeição e tentar novamente. Neste aspecto, os criadores da série Stranger Things foram bem persistentes: eles foram rejeitados cerca de 20 vezes pela Netflix antes de serem aceitos pela empresa de streaming. Uma das preocupações era que o elenco infantil poderia não conquistar o público adulto. Superada a rejeição, a série pode chegar a ter até cinco temporadas.</p>
-            <img class="imagens img-fluid" src="imagens/superando_a_rejeicao.jpg" alt="Stranger Things">
-            <li><h4 class="curih4">Seus criadores</h4></li>
-            <p>A série foi criada pelos gêmeos Matt Duffer e Ross Duffer, conhecidos como os The Duffer Brothers. Eles fazem filmes desde quando eram crianças, começando a produzir após ganhar de presente de seus pais uma câmera de vídeo Hi8. Além de Stranger Things, eles são conhecidos pelo filme de terror "Hidden", lançado em 2015.</p>
-            <img class="imagens img-fluid" src="imagens/seus_criadores.jpg" alt="Stranger Things">
-            <li><h4 class="curih4">1.000 crianças</h4></li>
-            <p>Este foi o número aproximado de crianças que participaram das audições e enviaram seus vídeos de testes para fazer parte do elenco. Finn Wolfhard, o escolhido para ser o personagem Mike, gravou seu vídeo de cama, pois estava doente. Já Gaten Matarazzo havia feito audição para ser o personagem Mike e acabou virando o Dustin.</p>
-            <img class="imagens img-fluid" src="imagens/mil_criancas.jpg" alt="Stranger Things">
-            <li><h4 class="curih4">Debaixo d'água</h4></li>
-            <p>Além de flutuar, a personagem Eleven precisa também passar muito tempo embaixo d'água, principalmente nas cenas no laboratório de experiências. Em uma das cenas, a atriz usou um capacete Sea Tank, que pesa 31 quilos fora d'água e apenas seis quilos quando imerso. Nas cenas em que a atriz passa dentro da água, os diretores se comunicavam com ela através de um pequeno fone em seu ouvido.</p>
-            <img class="imagens img-fluid" src="imagens/debaixo_dagua.jpg" alt="Stranger Things">
-            <li><h4 class="curih4">Primeiro beijo</h4></li>
-            <p>Ainda falando da atriz principal Millie Bobby Brown, você sabia que o primeiro beijo da jovem foi em uma cena da série? Millie beija Finn Wolfhard, o ator que interpreta Mike, no final da primeira temporada. Na época da cena, a atriz tinha apenas doze anos</p>
-            <img class="imagens" src="imagens/primeiro_beijo.jpg" alt="Stranger Things">
-        </ol>
-        <h3 class="curih4">Ler mais</h3>
-        <ul class="oneUl">
-          <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
-          <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
-          <li><a class="oneA" href="">Stranger Things: Você conhece o Demogorgon?</a></li>
-          <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
-        </ul>
+      <div class="pagina">
+          <h2 class="sub1">Inicio >>Curiosidades</h2>
+          <h3 class="sub2">Direto do mundo invertido: 5 curiosidades sobre a série Stranger Things</h3>
+          <div class="curiP">
+          <p class="recuo">A série Stranger Things é uma das mais populares do catálogo da Netflix, lançada em 2016 e com duas temporadas exibidas. Mas você sabia que, antes disso acontecer, ela já foi rejeitada 20 vezes pela produtora? Esta e outras curiosidades você vai descobrir agora!</p>
+            <ol>
+              <li><h4 class="curih4">Superando a rejeição</h4></li>
+              <p>Às vezes, tudo o que a gente precisa é superar uma rejeição e tentar novamente. Neste aspecto, os criadores da série Stranger Things foram bem persistentes: eles foram rejeitados cerca de 20 vezes pela Netflix antes de serem aceitos pela empresa de streaming. Uma das preocupações era que o elenco infantil poderia não conquistar o público adulto. Superada a rejeição, a série pode chegar a ter até cinco temporadas.</p>
+              <img class="imagens img-fluid" src="imagens/superando_a_rejeicao.jpg" alt="Stranger Things">
+              <li><h4 class="curih4">Seus criadores</h4></li>
+              <p>A série foi criada pelos gêmeos Matt Duffer e Ross Duffer, conhecidos como os The Duffer Brothers. Eles fazem filmes desde quando eram crianças, começando a produzir após ganhar de presente de seus pais uma câmera de vídeo Hi8. Além de Stranger Things, eles são conhecidos pelo filme de terror "Hidden", lançado em 2015.</p>
+              <img class="imagens img-fluid" src="imagens/seus_criadores.jpg" alt="Stranger Things">
+              <li><h4 class="curih4">1.000 crianças</h4></li>
+              <p>Este foi o número aproximado de crianças que participaram das audições e enviaram seus vídeos de testes para fazer parte do elenco. Finn Wolfhard, o escolhido para ser o personagem Mike, gravou seu vídeo de cama, pois estava doente. Já Gaten Matarazzo havia feito audição para ser o personagem Mike e acabou virando o Dustin.</p>
+              <img class="imagens img-fluid" src="imagens/mil_criancas.jpg" alt="Stranger Things">
+              <li><h4 class="curih4">Debaixo d'água</h4></li>
+              <p>Além de flutuar, a personagem Eleven precisa também passar muito tempo embaixo d'água, principalmente nas cenas no laboratório de experiências. Em uma das cenas, a atriz usou um capacete Sea Tank, que pesa 31 quilos fora d'água e apenas seis quilos quando imerso. Nas cenas em que a atriz passa dentro da água, os diretores se comunicavam com ela através de um pequeno fone em seu ouvido.</p>
+              <img class="imagens img-fluid" src="imagens/debaixo_dagua.jpg" alt="Stranger Things">
+              <li><h4 class="curih4">Primeiro beijo</h4></li>
+              <p>Ainda falando da atriz principal Millie Bobby Brown, você sabia que o primeiro beijo da jovem foi em uma cena da série? Millie beija Finn Wolfhard, o ator que interpreta Mike, no final da primeira temporada. Na época da cena, a atriz tinha apenas doze anos</p>
+              <img class="imagens" src="imagens/primeiro_beijo.jpg" alt="Stranger Things">
+          </ol>
+          <h3 class="treh4">Ler mais</h3>
+          <ul class="treUl">
+            <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+            <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+            <li><a class="oneA" href="">Stranger Things: Você conhece o Demogorgon?</a></li>
+            <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
 
       <!-- RODAPÉ -->  
