--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
                   <a class="dropdown-item" href="seasonone.html">Temporada 1</a>
                   <a class="dropdown-item" href="seasontwo.html">Temporada 2</a>
                   <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
+                  <a class="dropdown-item" href="seasonfuor.html">Temporada 4</a>
                 </div>
               </li> 
-              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
-              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
             </ul>
+            <div class="direita">
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+            </div>
           </div>
         </nav>
 
@@ -82,13 +85,13 @@
         <h2 class="sub1">Inicio >><i>Tudo sobre Stranger Things</i></h2>
         <h3 class="sub3">História da serie</h3>
           <p class="recuo">Passada na década de 80, na cidade fictícia de Hawkings, Stranger Things conta a história de um garoto que desaparece e dos eventos paranormais que se passam em torno desse acontecimento. Os personagens principais são seu grupo de amigos que acaba fazendo amizade com uma menina fugida de um laboratório e com poderes psicocinéticos.</p>
-          <p class="recuo">O sucesso da série está na forma como esta mistura o paranormal, o mistério e o drama, com representações fenomenais por parte dos atores. Além disso, Stranger Things apela também à nostalgia, fazendo uma homenagem à cultura pop dos anos 80.</p>
           <center><img class="img-fluid" style="padding-bottom: 10px; "src="imagens/imginicio.jpg" alt=""></center>
+          <p class="recuo">O sucesso da série está na forma como esta mistura o paranormal, o mistério e o drama, com representações fenomenais por parte dos atores. Além disso, Stranger Things apela também à nostalgia, fazendo uma homenagem à cultura pop dos anos 80.</p>
         </div>
         <!-- COLUNAS -->
 
         <div style="margin-top: 0px;"></div>
-        <h2 style="color: #fff; background-color: #9e0028; text-align: start; font-family: 'Fonte1'; font-size: 17pt; padding: 10px; padding-left: 50px;">Notícias</h2>
+        <h2 class="homeH2">Notícias</h2>
           <div class="row">               
             <div class="col-md-3">
               <figure class="img-thumbnail">
