--- a/noticiaFuor.html
+++ b/noticiaFuor.html
@@ -55,52 +55,24 @@
 
       <!-- FIM MENU -->
       <div class="pagina">
-        <h2 class="sub1">Inicio >> Stranger Things: 2ª Temporada</h2>
-        <h3>2ª Temporada</h3>
-        <p class="tworecuo">Stranger Things 2 foi confirmado pela Netflix em 31 de agosto de 2016 para um lançamento de 2017. Um trailer de anúncio revelou que a segunda temporada consistiu em nove episódios, além de mostrar o título provisório de cada episódio. As filmagens da temporada começaram em Atlanta, Geórgia, em 7 de novembro de 2016.</p>
-        <p class="tworecuo">Estamos em 1984 e os cidadãos de Hawkins , Indiana ainda estão se recuperando dos horrores do Demogorgon e dos segredos do Laboratório Hawkins . Will Byers foi resgatado do Upside Down, mas uma entidade maior e sinistra ainda ameaça aqueles que sobreviveram.</p>
-        <ul id=album-fotos>
-          <li id=fotos07></li>
-          <li id=fotos08></li>
-          <li id=fotos08></li>
-          <li id=fotos10></li>
-          <li id=fotos11></li>
-          <li id=fotos12></li>
-        </ul>   
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <h4 class="twoh4">Episodeos</h4>
-          <ol class="twoOl">
-            <li>"MADMAX"</li>
-            <li>"Trick or Treat, Freak"</li>
-            <li>"Will the Wise"</li>
-            <li>"The Pollywog"</li>
-            <li>"Dig Dug"</li>
-            <li>"The Spy"</li>
-            <li>"The Lost Sister"</li>
-            <li>"The Mind Flayer"</li>
-            <li>"The Gate"</li>
-          </ol>
-          <h4 class="twoh4">Trailer</h4>
-          <p class="tworecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 2ª Temporada de Stranger Things:</p>
-          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/R1ZXOOLMJ8s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-          <h4 class="twoh4">Ler mais</h4>
-          <ul class="twoUl">
-            <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
-            <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
-            <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
-          </ul>
+        <h2 class="sub1">Inicio >> Notícias</h2>
+        <h3 class="">Stranger Things: Gaten Matarazzo promete temporada mais assustadora</h3>
+        <p>Gaten Matarazzo, o Dustin de Stranger Things, vai protagonizar uma série de "câmera escondida" para a Netflix. O serviço de streaming encomendou oito episódios de Prank Encounters, que será estrelado e produzido pelo jovem ator.</p>
+        <p>De acordo com o Deadline, cada episódio da série será aterrorizante e hilariante, levando dois estranhos completos que acreditam que estão começando no primeiro dia de um trabalho novo. Tudo funciona normalmente, até que seus caminhos se encontram e esses empregos se transformam em pesadelos em tempo integral.</p>     
+        <p>A série foi criada por Ben Silverman e Howard Owens, da empresa Propagate, que também servem como produtores executivos ao lado de Matarazzo, Kevin Healey e Rob Hyde. A direção está por conta de Anthony Gonzalez (Dance Moms, O Chefe Espião).</p> 
+        <p>disso, Gaten Matarazzo poderá ser visto na terceira temporada de Stranger Things, que chega à Netflix no dia 4 de julho.</p>
       </div>
-      
+    
       <!-- RODAPÉ -->  
+
       <div id="footer">
         <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
       </div>
-
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
-    </div>     
+    </div> 
   </body>
 </html>
