--- a/seasonone.html
+++ b/seasonone.html
@@ -45,9 +45,11 @@
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
-              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
-              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
             </ul>
+            <div class="direita">
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+            </div>
           </div>
         </nav>
 
@@ -56,11 +58,9 @@
       <div class="pagina">
         <h2 class="sub1">Inicio >> Stranger Things: 1ª Temporada</h2>
         <h3 class="oneh3">1ª Temporada</h3>
-        <div class="oneP">
-          <p class="onerecuo" style="padding-top: 20px;">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
+          <p class="onerecuo">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
-        </div>
         <ul id=album-fotos>
           <li id=fotos01></li>
           <li id=fotos02></li>
@@ -85,7 +85,7 @@
         <h4 class="oneh4">Trailer</h4>
         <p class="onerecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 1ª Temporada de Stranger Things:</p>
         <center><iframe width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-        <h3 class="curih4">Ler mais</h3>
+        <h3 class="oneh4">Ler mais</h3>
         <ul class="oneUl">
           <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
           <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
