--- a/noticiaOne.html
+++ b/noticiaOne.html
@@ -56,7 +56,40 @@
       <!-- FIM MENU -->
       <div class="pagina">
         <h2 class="sub1">Inicio >> Notícias >> Stranger Things: Teorias da 4ª Temporada</h2>
-
+        <p>Na última sexta, 14, a Netflix pegou de surpresa todos os fãs das aventuras da pequena cidade de Hawkins com o primeiro teaser da quarta temporada de Stranger Things.</p>
+        <p>O trecho, intitulado de "Da Rússia... com amor", deixou o público ansioso para o que pode acontecer na nova leva de episódios, principalmente depois de solucionar o grande mistério deixado no desfecho da temporada. Ao que tudo indica, Jim Hopper, o querido xerife da cidade, supostamente dado como morto, está vivo. </p>
+        <p>Com a aparição de Hopper, é claro, os fãs já criaram algumas teorias. Pensando nisso, com base em algumas informações que NME elencou sobre a nova temporada, selecionamos tudo o que já se sabe sobre a adorada ficção científica original da Netflix. Veja abaixo: </p>
+        <h3>Quando a quarta temporada de Stranger Things será lançada?</h3>
+        <p>Até o momento, a data de lançamento ainda não foi divulgada. Mas, levando em consideração de que houve um intervalo de 20 meses entre a segunda e a terceira temporada, talvez não voltemos para Hawkins ainda em 2020.</p> 
+        <p>Um fã da série publicou no Reddit um cálculo em que ele "descobre" quando a quarta temporada será lançada - a teoria é baseada nos desenhos vistos no quarto do Will durante os acontecimentos da terceira temporada da Netflix, como você pode ver abaixo.</p> 
+        <p>Aos 2:59 é possível ver o número 403-X no uniforme de um prisoneiro - que o fã considera ser Hopper. Esse número é o mesmo do quarto de hospital onde Nancy visitou a Sra. Driscoll. Para ele, isso pode ser uma referência sutil à data de lançamento da quarta temporada: 3 de abril de 2020.</p> 
+        <p> Além disso, a data se encaixaria com o ano do desastre de Chernobyl, de 1986, que seguiria também uma teoria dos fãs de que os eventos de Stranger Things podem ser afetados pelo caso.</p>
+        <h3>Já existe uma prévia da quarta temporada? </h3>
+        <p>Super! E esse trecho revela que um personagem não está tão morto quanto pensávamos. Assista abaixo:</p>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/13RzFlVP2MY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <h3>As filmagens já começaram?</h3>
+        <p>Depois dos rumores de que as filmagens teriam começado em outubro de 2019, um fã ávido forneceu algumas evidências inéditas que foram publicadas pelo Daily Mail.</p>
+        <p>"As filmagens começaram em Roma, na Geórgia. Atualmente eles estão filmando atrás da casa do meu irmão", comentou no Reddit ao compartilhar uma foto do set de filmagem com o icônico caminhão de Hopper.</p>
+        <p>Em um comunicado de imprensa, a Netflix disse: "Estamos empolgados em confirmar oficialmente que a produção de Stranger Things 4 está em andamento - e ainda mais empolgados em anunciar o retorno de Hopper! Embora nem todas sejam boas notícias para o nosso "americano"; ele está preso longe de casa, no deserto nevado de Kamchatka, onde enfrentará perigos tanto humanos... como outros. Enquanto isso, nos Estados Unidos, um novo horror está começando a surgir, algo enterrado há muito tempo, algo que conecta tudo".</p>
+        <h3>Quem está no elenco?</h3>
+        <p>É possível esperar que a maioria do elenco principal retorne, então contamos com Winona Ryder (Joyce Byers), Finn Wolfhard (Mike Wheeler), Millie Bobby Brown (Eleven), Gaten Matarazzo (Dustin Henderson), Caleb McLaughlin (Lucas Sinclair) e Natalia Dyer ( Nancy Wheeler), Noah Schnapp (Will Byers), Sadie Sink (Max Mayfield), Maya Hawke (Robin) e Charlie Heaton (Jonathan Byers).</p> 
+        <p>Na terceira temporada, nos despedimos de alguns personagens como Billy (Dacre Montgomery) que não retornará após ter se sacrificado para salvar Hawkins. Maya Hawke também tem falado com a imprensa sobre as expectativas para a quarta temporada, e para onde ela imagina a personagem indo.</p>  
+        <p> Em uma entrevista para o Consequence of Sound, Hawke disse: "Robin evoluiu muito durante a temporada. Eu acho que os irmãos Duffer se inspiram muito em nos atores, então, quanto melhor os irmãos me conhecerem, mais o personagem muda. Mas você teria que perguntar aos irmãos sobre isso".</p> 
+        <p>Enquanto Noah Schnapp confirmou que retornará como Will Byers, ao compartilhar a emoção para a próxima temporada para o Hollywood Reporter. "Estou ansioso por isso. É a minha coisa favorita no mundo e adoro trabalhar com essas pessoas. É como uma família", contou.</p>  
+        <p> "Li os quatro primeiros roteiros e eles são incríveis. Mal posso esperar para ver onde eles vão ao longo da temporada".</p>
+        <p> Andrey Ivchenko, que interpretou Grigori, também deu a entender que poderia voltar para a quarta temporada, embora o personagem tenha sido morto no episódio final da terceira temporada.</p>      
+        <p>"É ficção científica, você sabe, coisas podem acontecer. Por enquanto, o que eu sei é que ele está morto. Mas quem sabe?".</p> 
+        <p>Algumas também confirmaram à TVLine que os criadores do programa, os irmãos Duffer, devem lançar quatro novos personagens masculinos para a nova temporada. Três desses novos personagens são adolescentes e um é adulto. Ao que tudo indica, é que o adulto pode ser crucial na história russa que deve se desenrolar na nova temporada.</p>
+        <h3>O que pode acontecer na nova temporada?</h3>
+        <p>No desfecho da terceira leva de episódios, vimos Joyce, Will e Jonathan, com Eleven, se mudando para outra cidade. Isso significa que a quarta temporada pode apresentar o grupo separado e o programa se afastar de Hawkins pela primeira vez.</p>
+        <p>Jonathan e Nancy se reconciliaram depois as tensões, então é possível vê-los tentando um relacionamento de longa distância. Em uma nova entrevista à Entertainment Weekly, os irmãos Duffer brincaram mais sobre os “portais” que podem levar os personagens de Hawkins, Indiana, para mundos diferentes.</p>
+        <p>"Temos grandes apostas", disse Ross. “Agora, é só preencher essas linhas com detalhes. Estamos muito empolgados com a possibilidade de onde isso vai chegar. Mais uma vez, como dissemos, vai ser muito diferente do que a última temporada. Mas penso que é a coisa certa a fazer e que será emocionante".</p>
+        <p>Alguns fãs têm sugerido que a quarta temporada passará por um grande desastre nuclear. Mais especificadamente, eles acreditam que Eleven desencadeará o caos da usina de Chernobyl em 1986. A teoria é baseada no fato de que a terceira temporada terminou em outubro de 1985, apenas seis meses antes do desastre de abril do ano seguinte. Isso ganha força com os espiões russos sendo introduzidos na temporada.</p>
+        <p>Enquanto isso, os irmãos Duffer lançaram alguns tuítes enigmáticos com possíveis pistas de algo que poderia estar acontecendo. Veja abaixo:</p>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">anyway I think you’ll—— sorry I couldn’t get it done—— but you mean so—— and it’s been—— hope this is——— last until—— love—— <a href="https://t.co/DjRNXbrlKC">pic.twitter.com/DjRNXbrlKC</a></p>&mdash; stranger writers (@strangerwriters) <a href="https://twitter.com/strangerwriters/status/1184945905973153792?ref_src=twsrc%5Etfw">October 17, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <h3>Eleven vai recuperar os poderes?</h3>
+        <p>Isso teremos que esperar e ver. No final da terceira temporada, Eleven perde os poderes logo depois de lutar com o Mind Flayer, e não houve sinal de que esses poderes retornariam. Mike está confiante que sim - mas apenas o tempo poderá dizer.</p>  
+        <p>Um fã criou uma teoria sobre o retorno dos poderes de Eleven que envolve o relacionamento com Mike.</p>
       </div>
     
       <!-- RODAPÉ -->  
